# Vidhi

./: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
backend/: requirements.txt  sample-issue-input.json  smoke_test.py
backend/app/: config.py  error_handlers.py  guardrails.py  logging_config.py  main.py  queue.py  reliability.py  request_models.py  response_models.py  versioning.py
backend/config/: runtime.example.json
deploy/: README.md  deploy.sh  healthcheck.sh  teardown.sh
docs/: AGENTS.md  ARCHITECTURE.md  DATA_INGESTION.md  DATA_SOURCES.md  DEPLOYMENT.md  EVALUATION.md  GOVERNANCE.md  RISK_REGISTER.md  ROADMAP.md  api.md  architecture.md  configuration.md  prompt-strategy.md  repo-hygiene.md  secrets-management.md  versioning.md
docs/api/: api_examples.md  openapi_spec.yaml
docs/architecture/: Docker_Infrastructure_architecture.md  OnPrem_Deployment_diagram.md  data_ingestion_pipeline.mmd  deployment_free_tier.mmd  multi_agent_architecture.md  multi_agent_architecture.mmd  sequence_diagram.md  sequence_diagram_user_flow.mmd  system_architecture.md
docs/dataset/: data_sources.md  ingestion_strategy.md  sample_dataset_manifest.md
docs/design/: agent_responsibilities.md  evaluation_strategy.md  human_handoff_rules.md  limitations.md  problem_statement.md  safety_ethics_governance.md  scope_and_boundaries.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
notebooks/: demo_workflow.ipynb
scripts/: backend-dev.ps1  backend-setup.ps1  backend-smoke.ps1  build_vectorstore.sh  check-no-secrets.py  clean_outputs.sh  create-release-tag.sh  export-clean-repo.sh  export_results.sh  ingest_documents.sh  reset_vectorstore.sh  run_api.sh  run_evaluation.sh  run_tests.sh  run_ui.sh  setup_env.sh  start_all.sh  validate-versioning.py
src/agents/: base_agent.py  cca_compliance_check_agent.py  clsa_case_law_search_agent.py  dga_document_generation_agent.py  laa_limitation_analysis_agent.py  lab_argument_builder_agent.py  laf_legal_aid_finder_agent.py  lii_issue_identifier_agent.py  lra_legal_research_agent.py
src/api/: main.py
src/common/: exceptions.py  safety_utils.py  schemas.py  text_utils.py
src/config/: constants.py  logging_config.py  settings.py
src/core/: agent_registry.py  api_orchestrator.py  citation_validator.py  config.py  logging_config.py  orchestrator.py  prompt_manager.py  research_service.py  response_formatter.py  safety_guardrails.py  session_memory.py  task_router.py
src/evaluation/: citation_accuracy_tests.py  evaluation_runner.py  hallucination_checks.py  latency_benchmarks.py  metrics.py  rubric_scoring.py
src/graph/: edges.py  graph.py  nodes.py  state.py
src/notebooks/: demo_workflow.ipynb  failure_simulation.ipynb
src/orchestrator/: agent_orchestrator.py
src/retrieval/: chroma_store.py  embedding_provider.py  faiss_store.py  query_expander.py  reranker.py  retriever.py  vector_store_manager.py
src/storage/: cache_manager.py  local_storage.py  s3_storage.py
src/ui/: streamlit_app.py
src/utils/: json_utils.py  logging_utils.py  time_utils.py
src/validation/: citation_validator.py  hallucination_detector.py
tests/: README.md  test_api_endpoints.py  test_app_launch_smoke.py  test_argument_quality.py  test_cca_agent.py  test_citation_validator.py  test_clsa_agent.py  test_dga_agent.py  test_hallucination.py  test_laa_agent.py  test_lab_agent.py  test_laf_agent.py  test_lii_agent.py  test_lra_agent.py  test_orchestrator_flow.py  test_orchestrator_import_contract.py  test_production_readiness.py  test_research_rag_service.py  test_retrieval_quality.py  test_vector_retrieval.py
tests/integration/: test_feedback_contract.py  test_health_contract.py  test_metrics_contract.py  test_prompt_versions_contract.py  test_queue_stats_contract.py
tests/prompt_validation/: contracts.py  fixtures.py  golden_cases.py  test_prompt_contract_validation.py  test_prompt_golden_outputs.py
tests/unit/: test_config.py  test_embeddings_cache.py  test_error_handlers.py  test_guardrails.py  test_logging_config.py  test_main_utils.py  test_prompt_builder.py  test_prompt_service.py  (+6 more)
(+86 files in other folders)
