[metadata]
name = vidhi
version = 0.1.0
description = Vidhi - Multi-Agent Legal Research and Document Drafting Assistant
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Jamirahmad Mulla, Manish Awari, Sandip Guliani, Sunny Shende, Wilson Johny
keywords = legal, multi-agent, rag, fastapi, streamlit, vectorstore, ai
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
python_requires = >=3.10
package_dir =
    = src
packages = find:
include_package_data = True

install_requires =
    python-dotenv>=1.0.0
    pydantic>=2.5.0
    pydantic-settings>=2.0.0
    loguru>=0.7.0
    fastapi>=0.110.0
    uvicorn[standard]>=0.27.0
    python-multipart>=0.0.9
    streamlit>=1.32.0
    requests>=2.31.0
    beautifulsoup4>=4.12.0
    lxml>=5.1.0
    pypdf>=4.0.0
    pdfplumber>=0.11.0
    pytesseract>=0.3.10
    Pillow>=10.0.0
    langdetect>=1.0.9
    regex>=2023.12.25
    numpy>=1.26.0
    scikit-learn>=1.4.0
    faiss-cpu>=1.8.0
    chromadb>=0.4.24
    openai>=1.0.0
    pyyaml>=6.0.1

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-cov>=4.1.0
    httpx>=0.27.0
    black>=24.0.0
    ruff>=0.2.0
    mypy>=1.8.0
    pre-commit>=3.6.0

[options.package_data]
* = *.txt, *.md, *.yaml, *.yml, *.json

[options.entry_points]
console_scripts =
    vidhi-api = api.main:app

[tool:pytest]
minversion = 8.0
addopts = -ra -q
testpaths = tests

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    venv

[mypy]
python_version = 3.10
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
